# taskboard-agent-orchestrator

./: .env.example  LICENSE  README.md  generate_proposal_pdf.py  logging.conf  proposal_slides.md  pyproject.toml
docs/: use-cases.md
src/taskboard_agent/: __init__.py  cli.py  config.py  linkace.py  llm.py  logging_config.py  page.py  redmine.py  workflow.py
tests/: test_config.py  test_linkace.py  test_llm.py  test_logging_config.py  test_page.py  test_redmine.py  test_workflow.py
