[project]
name = "taskboard-agent-orchestrator"
version = "0.1.0"
description = "Redmine-backed taskboard agent orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
taskboard-agent = "taskboard_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "taskboard_agent"
module-root = "src"
